--- a/amp/about.html
+++ b/amp/about.html
@@ -559,7 +559,7 @@ header.masthead h1{font-size:2.4rem;}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Curriculum</a>
             <div class="dropdown-menu" aria-labelledby="dropdown03">
-              <a class="dropdown-item" href="./curriculum.html">Our Curriculum</a>
+              <a class="dropdown-item" href="./curriculum.html">No-Limit Curriculum</a>
               <a class="dropdown-item" href="./affiliation.html">Affiliation</a>
               <a class="dropdown-item" href="./assessment.html">Assessment</a>
             </div>
@@ -567,7 +567,7 @@ header.masthead h1{font-size:2.4rem;}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
             <div class="dropdown-menu" aria-labelledby="dropdown03">
-              <a class="dropdown-item" href="./facilities.html">Facilities</a>
+              <a class="dropdown-item" href="./facilities.html">Sports Facilities</a>
               <a class="dropdown-item" href="./nutrition.html">Nutrition</a>
               <a class="dropdown-item" href="./infirmary.html">Infirmary</a>
             </div>
@@ -598,7 +598,7 @@ header.masthead h1{font-size:2.4rem;}
                 <section>
                   <header class="drop-head">Our Curriculum</header>
                   <ul class="ampstart-dropdown-items list-reset m0 p0 drop-list">
-                      <li class="ampstart-dropdown-item"><a href="./curriculum.html" class="text-decoration-none">Curriculum</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./curriculum.html" class="text-decoration-none">No-Limit Curriculum</a></li>
                       <li class="ampstart-dropdown-item"><a href="./affiliation.html" class="text-decoration-none">Affiliation</a></li>
                       <li class="ampstart-dropdown-item"><a href="./assessment.html" class="text-decoration-none">Assessment</a></li>
                   </ul>
@@ -611,7 +611,7 @@ header.masthead h1{font-size:2.4rem;}
                 <section>
                   <header class="drop-head">Facilities</header>
                   <ul class="ampstart-dropdown-items list-reset m0 p0 drop-list">
-                      <li class="ampstart-dropdown-item"><a href="./facilities.html" class="text-decoration-none">Facilities</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./facilities.html" class="text-decoration-none">Sports Facilities</a></li>
                       <li class="ampstart-dropdown-item"><a href="./nutrition.html" class="text-decoration-none">Nutrition</a></li>
                       <li class="ampstart-dropdown-item"><a href="./infirmary.html" class="text-decoration-none">Infirmary</a></li>
                   </ul>
