--- a/amp/thanks.html
+++ b/amp/thanks.html
@@ -519,86 +519,86 @@ header.masthead h1{font-size:2.4rem;}
   </amp-animation>    
     
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3 bg-white shadow" id="mainNav">
-          <div class="container">
-          <a class="navbar-brand " href="./index.html"><amp-img src="../assets/pragyanam-logo.png" alt="Pragyanam Logo"  layout="fixed" width="200px" height="55"></amp-img></a>
-          <button class="navbar-toggler ampstart-navbar-trigger d-none" role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0"><span class="navbar-toggler-icon"></span></button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./about.html">About Us</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Curriculum</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown03">
-                  <a class="dropdown-item" href="./curriculum.html">Our Curriculum</a>
-                  <a class="dropdown-item" href="./affiliation.html">Affiliation</a>
-                  <a class="dropdown-item" href="./assessment.html">Assessment</a>
-                </div>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown03">
-                  <a class="dropdown-item" href="./facilities.html">Facilities</a>
-                  <a class="dropdown-item" href="./nutrition.html">Nutrition</a>
-                  <a class="dropdown-item" href="./infirmary.html">Infirmary</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./admission.html">Admission</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./careers.html">Careers</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        </nav>
+     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3 bg-white shadow" id="mainNav">
+      <div class="container">
+      <a class="navbar-brand " href="./index.html"><amp-img src="../assets/pragyanam-logo.png" alt="Pragyanam Logo"  layout="fixed" width="200px" height="55"></amp-img></a>
+      <button class="navbar-toggler ampstart-navbar-trigger d-none" role="button" aria-label="open sidebar" on="tap:header-sidebar.toggle" tabindex="0"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About Us</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Curriculum</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown03">
+              <a class="dropdown-item" href="./curriculum.html">No-Limit Curriculum</a>
+              <a class="dropdown-item" href="./affiliation.html">Affiliation</a>
+              <a class="dropdown-item" href="./assessment.html">Assessment</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown03">
+              <a class="dropdown-item" href="./facilities.html">Sports Facilities</a>
+              <a class="dropdown-item" href="./nutrition.html">Nutrition</a>
+              <a class="dropdown-item" href="./infirmary.html">Infirmary</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./admission.html">Admission</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./careers.html">Careers</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    </nav>
 
-      <!-- Start Sidebar -->
-      <amp-sidebar id="header-sidebar" class="ampstart-sidebar bg-white" layout="nodisplay">
-        <div class="flex justify-start items-center ampstart-sidebar-header closeslide">
-          <div role="button" aria-label="close sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger items-start">✕</div>
-        </div>
-        <nav class="ampstart-sidebar-nav ampstart-nav">
-          <ul class="list-reset m0 p0 ampstart-label">
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./index.html">Home</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./about.html">About Us</a></li>
-                <li class="ampstart-nav-item">
-                  <!-- Start Dropdown-inline -->
-                  <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown start-drop">
-                    <section>
-                      <header class="drop-head">Our Curriculum</header>
-                      <ul class="ampstart-dropdown-items list-reset m0 p0 drop-list">
-                          <li class="ampstart-dropdown-item"><a href="./curriculum.html" class="text-decoration-none">Curriculum</a></li>
-                          <li class="ampstart-dropdown-item"><a href="./affiliation.html" class="text-decoration-none">Affiliation</a></li>
-                          <li class="ampstart-dropdown-item"><a href="./assessment.html" class="text-decoration-none">Assessment</a></li>
-                      </ul>
-                    </section>
-                  </amp-accordion>
-                </li>
-                <li class="ampstart-nav-item">
-                  <!-- Start Dropdown-inline -->
-                  <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown start-drop">
-                    <section>
-                      <header class="drop-head">Facilities</header>
-                      <ul class="ampstart-dropdown-items list-reset m0 p0 drop-list">
-                          <li class="ampstart-dropdown-item"><a href="./facilities.html" class="text-decoration-none">Facilities</a></li>
-                          <li class="ampstart-dropdown-item"><a href="./nutrition.html" class="text-decoration-none">Nutrition</a></li>
-                          <li class="ampstart-dropdown-item"><a href="./infirmary.html" class="text-decoration-none">Infirmary</a></li>
-                      </ul>
-                    </section>
-                  </amp-accordion>
-                </li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./admission.html">Admission</a></li>
-                <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./careers.html">Careers</a></li>
-          </ul>
-        </nav>
-      </amp-sidebar>
-      <!-- End Sidebar -->
+  <!-- Start Sidebar -->
+  <amp-sidebar id="header-sidebar" class="ampstart-sidebar bg-white" layout="nodisplay">
+    <div class="flex justify-start items-center ampstart-sidebar-header closeslide">
+      <div role="button" aria-label="close sidebar" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger items-start">✕</div>
+    </div>
+    <nav class="ampstart-sidebar-nav ampstart-nav">
+      <ul class="list-reset m0 p0 ampstart-label">
+            <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./index.html">Home</a></li>
+            <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./about.html">About Us</a></li>
+            <li class="ampstart-nav-item">
+              <!-- Start Dropdown-inline -->
+              <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown start-drop">
+                <section>
+                  <header class="drop-head">Our Curriculum</header>
+                  <ul class="ampstart-dropdown-items list-reset m0 p0 drop-list">
+                      <li class="ampstart-dropdown-item"><a href="./curriculum.html" class="text-decoration-none">No-Limit Curriculum</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./affiliation.html" class="text-decoration-none">Affiliation</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./assessment.html" class="text-decoration-none">Assessment</a></li>
+                  </ul>
+                </section>
+              </amp-accordion>
+            </li>
+            <li class="ampstart-nav-item">
+              <!-- Start Dropdown-inline -->
+              <amp-accordion layout="container" disable-session-states="" class="ampstart-dropdown start-drop">
+                <section>
+                  <header class="drop-head">Facilities</header>
+                  <ul class="ampstart-dropdown-items list-reset m0 p0 drop-list">
+                      <li class="ampstart-dropdown-item"><a href="./facilities.html" class="text-decoration-none">Sports Facilities</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./nutrition.html" class="text-decoration-none">Nutrition</a></li>
+                      <li class="ampstart-dropdown-item"><a href="./infirmary.html" class="text-decoration-none">Infirmary</a></li>
+                  </ul>
+                </section>
+              </amp-accordion>
+            </li>
+            <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./admission.html">Admission</a></li>
+            <li class="ampstart-nav-item"><a class="ampstart-nav-link" href="./careers.html">Careers</a></li>
+      </ul>
+    </nav>
+  </amp-sidebar>
+  <!-- End Sidebar -->
 
         <!-- Masthead-->
            <header class="masthead all-cover">
